ensure calendar text does not wrap

--- a/app/pages/patientdata/patientdata.less
+++ b/app/pages/patientdata/patientdata.less
@@ -63,6 +63,7 @@
   align-items: center;
   justify-content: center;
   font-size: 14px;
+  text-wrap: nowrap;
 }
 
 .patient-data-subnav-dates-daily {
